# mssql-scripter

./: .bumpversion.cfg  README.rst  appveyor.yml  build.py  dev_requirements.txt  dev_setup.py  dos2unix.py  mssql-scripter.pyproj  setup.cfg  setup.py  tox.ini  utility.py
mssqlscripter/: __init__.py  __main__.py  argparser.py  main.py  scriptercallbacks.py  scripterlogging.py  sqltoolsclient.py
mssqlscripter/jsonrpc/: jsonrpcclient.py
mssqlscripter/jsonrpc/contracts/: __init__.py  scriptingservice.py
mssqlscripter/jsonrpc/contracts/tests/: test_scripting.py
mssqlscripter/jsonrpc/tests/: test_jsonrpc.py  test_jsonrpcclient.py
mssqlscripter/mssqltoolsservice/: __init__.py  external.py
mssqlscripter/tests/: test_argparser.py  test_sqltoolsclient.py
