[metadata]
description_file = README.rst
license_files = LICENSE.txt

[flake8]
max-line-length = 88
extend-ignore =
    # E203: whitespace before ':'.
    E203,
    # E501: line too long.
    E501,
    # F401, imported but unused, ignore where we import setup.
    F401,

# Explicitly specifying what files/directories we check 
# in case user creates a virtual environment in repo, 
# forgoing the need for them to modify this file to ignore their venv directory.
filename =
    ./mssqlscripter/*.py,
    ./mssqlscripter/mssqltoolsservice/*.py,
    ./dev_setup.py,
    ./setup.py,
    ./utility.py,
    ./verify_packaging.py
